# yt-to-transcript

./: .gitignore  README.md  main.py  pyproject.toml
