[tool.poetry]
name = "yt-to-transcript"
version = "0.1.0"
description = ""
authors = ["iainkirkpatrick <iain@iainkirkpatrick.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
validators = "^0.28.0"
moviepy = "^1.0.3"
openai-whisper = { git = "https://github.com/openai/whisper.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
